SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Log counter (see right of SQuirreL's status bar) did neglect several logs issued during startup.

Right mouse menus of SQL results, the SQL editor and the Object tree now allow to move less used
  menu items to a submenu called attic, see the bottommost menu item of these menus.

Option to view and/or copy passwords of Aliases.
  This option is switched off by default and can be switched on at menu File --> Global Preferences
  --> tab General on the lower right see box titled "Alias password access"

The add/edit Driver dialog was redesigned to make clear that adding JDBC driver JARs is the primary action.

Intersystems Cache Plugin: Updated COS class in Plugin readme/help.
  Thanks to Martin Weissenborn for the update.

Saved Sessions improvement (See the four buttons at the right of SQuirreL's topmost toolbar):
  Printing Saved Session details now prints contained external and internal files.

Intersystems Cache Plugin: Now works for Intersystems Cache and IRIS.

Look and Feel plugin: Upgrade FlatLaF to 2.4

SQL Script Plugin: The Plugin's help now describes how to run query output directly into a file.
  See bottom of the Plugin's help page.
  Example syntax: @file '/tmp/customers.xlsx' SELECT * FROM customers

Saved Sessions improvements (See the four buttons at the right of SQuirreL's topmost toolbar):
  Internally saved files are treated as normal files but are recognizable by blue bordered file icons.
  Internally saved files can be change tracked by GIT (https://git-scm.com).
  New toolbar to save and commit all files of a Saved Session to GIT.

The about dialog now contains a link to SQuirreL's new GitHub web page:
  https://github.com/squirrel-sql-client

Improved handling of OpenEdge DB specifics.