@@ -65,7 +65,7 @@ SavedSessionMoreDlg.show.change.default.alias.offer.tooltip=<html>On saving a Se
 
 SavedSessionMoreDlg.close=Close
 
-saved.sessions.info.html=<html><b>On Saved Sessions:</b>\
+SavedSessionMoreDlg.saved.sessions.info.html=<html><b>On Saved Sessions:</b>\
   <br>The Saved Session feature allows to save and restore all SQL editors of a Session at once.\
   <br>Saved Session are especially useful when working with additional SQL Tabs or SQL Worksheets.\
   <br>SQL editors with open files are saved by saving the files and referencing them from the Saved Session.\
@@ -93,3 +93,6 @@ SavedSessionMoreDlg.max.savedSession=Maximum number of Saved Session (longest un
 
 SavedSessionsManager.maximum.number.saved.sessions.exceeded=Maximum number ({0}) of Saved Sessions exceeded. Deleting {1} Saved Session(s). \
   To adjust the maximum number of Saved Sessions got to menu Windows --> Open Saved Session --> section Configurations.
+
+SavedSessionMoreDlg.enter.search.text=Enter search text to search in Saved Session name, default Alias and file names
+SavedSessionMoreDlg.remember.last.search=Remember last search
